--- a/platformio.ini
+++ b/platformio.ini
@@ -74,33 +74,52 @@
 ;upload_speed = 115200
 ;upload_port = 192.168.2.30
 
-[env:Gateway_38]
+; [env:Gateway_38]
+; platform = espressif32
+; board = heltec_wifi_lora_32
+; framework = arduino
+; lib_deps =
+;   # RECOMMENDED
+;   # Accept new functionality in a backwards compatible manner and patches
+;   sandeepmistry/LoRa @ ^0.8.0
+; build_flags =
+;   -D _WIFIMANAGER=0
+;   -D _SPIFFS_FORMAT=0
+;   -D _OLED=1
+;   -D _DUSB=1
+;   -D _PROFILER=1
+;   -D _STRICT_1CH=2
+;   -D _MAXSEEN=10
+;   -D _STAT_LOG=0
+;   -D _LOCALSERVER=2
+;   -D _BUF_WRITE=0
+;   -D _EXPERT=1
+; ;  -D _JSONENCODE=1
+; upload_protocol = espota
+; ;board_upload.flash_size = 8MB
+; ;board_upload.maximum_size=8388608
+; board_build.flash_mode = qio
+; upload_speed = 115200
+; upload_port = 192.168.13.38
+
+[env:sparkfun_lora_gateway_1-channel]
 platform = espressif32
-board = heltec_wifi_lora_32
-framework = arduino
-lib_deps =
-  # RECOMMENDED
-  # Accept new functionality in a backwards compatible manner and patches
-  sandeepmistry/LoRa @ ^0.8.0
+board = sparkfun_lora_gateway_1-channel
+board_build.mcu = esp32
+board_build.f_cpu = 240000000L
 build_flags =
-  -D _WIFIMANAGER=0
-  -D _SPIFFS_FORMAT=0
-  -D _OLED=1
-  -D _DUSB=1
-  -D _PROFILER=1
-  -D _STRICT_1CH=2
-  -D _MAXSEEN=10
-  -D _STAT_LOG=0
-  -D _LOCALSERVER=2
-  -D _BUF_WRITE=0
-  -D _EXPERT=1
-;  -D _JSONENCODE=1
-upload_protocol = espota
-;board_upload.flash_size = 8MB
-;board_upload.maximum_size=8388608
+ -D _WIFIMANAGER=0
+ -D _SPIFFS_FORMAT=0
+ -D _OLED=0
+ -D _DUSB=1
+ -D _PROFILER=1
+ -D _STAT_LOG=1
+ -D _PIN_OUT=6
+framework = arduino
 board_build.flash_mode = qio
 upload_speed = 115200
-upload_port = 192.168.2.38
+upload_port = COM6
+monitor_speed = 115200
 
 ;[env:Gateway_39]
 ;platform = espressif32
